// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInScreen snapshot matches snapshot in default (idle) state 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#f3f4f6",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 10,
              "maxWidth": 448,
              "padding": 33,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 20,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 25,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 144,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "rgba(13, 242, 242, 0.1)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "width": 64,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1f2937",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                Welcome Back
              </Text>
              <Text
                style={
                  {
                    "color": "#6b7280",
                    "fontSize": 16,
                    "marginTop": 4,
                    "textAlign": "center",
                  }
                }
              >
                Please enter your details
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "backgroundColor": "#f3f4f6",
                "borderRadius": 12,
                "flexDirection": "row",
                "marginBottom": 24,
                "padding": 4,
                "width": "100%",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 12,
                  "elevation": 2,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 8,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.05,
                  "shadowRadius": 2,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                    {
                      "color": "#1f2937",
                    },
                  ]
                }
              >
                Login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 8,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                    {
                      "color": "#6b7280",
                    },
                  ]
                }
              >
                Sign Up
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Username
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="Enter your username"
                  style={
                    {
                      "color": "#6b7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Password
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="••••••••"
                  secureTextEntry={true}
                  style={
                    {
                      "color": "#6b7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0df2f2",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginTop": 8,
                    "textAlign": "right",
                  }
                }
              >
                Forgot Password?
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 16,
                    "opacity": 1,
                    "width": 16,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#4b5563",
                    "fontSize": 14,
                    "marginLeft": 8,
                  }
                }
              >
                Use biometrics for faster login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#0df2f2",
                  "borderRadius": 12,
                  "elevation": 5,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 10,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 15,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#111827",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                Sign In
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "rgba(13, 242, 242, 0.3)",
                  "borderRadius": 12,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 24,
                  "opacity": 1,
                  "paddingHorizontal": 18,
                  "paddingVertical": 14,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "marginRight": 8,
                    "width": 18,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#0df2f2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Sign in with Biometrics
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#e5e7eb",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                  "marginHorizontal": 8,
                }
              }
            >
              Or continue with
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#e5e7eb",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Google
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Facebook
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#9ca3af",
                  "fontSize": 12,
                  "textAlign": "center",
                }
              }
            >
              By continuing, you agree to our
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Terms of Service
              </Text>
              

              and
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Privacy Policy
              </Text>
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SignInScreen snapshot matches snapshot in loading state 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#f3f4f6",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 10,
              "maxWidth": 448,
              "padding": 33,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 20,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 25,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 144,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "rgba(13, 242, 242, 0.1)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "width": 64,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1f2937",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                Welcome Back
              </Text>
              <Text
                style={
                  {
                    "color": "#6b7280",
                    "fontSize": 16,
                    "marginTop": 4,
                    "textAlign": "center",
                  }
                }
              >
                Please enter your details
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "backgroundColor": "#f3f4f6",
                "borderRadius": 12,
                "flexDirection": "row",
                "marginBottom": 24,
                "padding": 4,
                "width": "100%",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 12,
                  "elevation": 2,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 8,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.05,
                  "shadowRadius": 2,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                    {
                      "color": "#1f2937",
                    },
                  ]
                }
              >
                Login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 12,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 8,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                    {
                      "color": "#6b7280",
                    },
                  ]
                }
              >
                Sign Up
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Username
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="Enter your username"
                  style={
                    {
                      "color": "#6b7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Password
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="••••••••"
                  secureTextEntry={true}
                  style={
                    {
                      "color": "#6b7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0df2f2",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginTop": 8,
                    "textAlign": "right",
                  }
                }
              >
                Forgot Password?
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d1d5db",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 16,
                    "opacity": 1,
                    "width": 16,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#4b5563",
                    "fontSize": 14,
                    "marginLeft": 8,
                  }
                }
              >
                Use biometrics for faster login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#0df2f2",
                  "borderRadius": 12,
                  "elevation": 5,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 10,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 15,
                }
              }
            >
              <ActivityIndicator
                color="#000"
              />
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "rgba(13, 242, 242, 0.3)",
                  "borderRadius": 12,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 24,
                  "opacity": 1,
                  "paddingHorizontal": 18,
                  "paddingVertical": 14,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "marginRight": 8,
                    "width": 18,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#0df2f2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Sign in with Biometrics
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#e5e7eb",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                  "marginHorizontal": 8,
                }
              }
            >
              Or continue with
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#e5e7eb",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Google
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Facebook
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#9ca3af",
                  "fontSize": 12,
                  "textAlign": "center",
                }
              }
            >
              By continuing, you agree to our
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Terms of Service
              </Text>
              

              and
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Privacy Policy
              </Text>
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
